--- a/_c8oProject/mobileMenus/Menu.yaml
+++ b/_c8oProject/mobileMenus/Menu.yaml
@@ -13,7 +13,7 @@ tagName: ion-menu
       ↓Text [mobile.components.UIText-1500890755422]: 
         textValue: 
           - xmlizable: 
-            - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+            - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: plain:My Menu
 ↓Content [mobile.components.UIDynamicElement-1500890742326]: 
   beanData: '{"ionBean":"Content"}'
