--- a/_c8oProject/mobilePages/FlowViewer.yaml
+++ b/_c8oProject/mobilePages/FlowViewer.yaml
@@ -445,13 +445,13 @@ title: Title for FlowViewer
       ↓flow [mobile.components.UIControlVariable-1588693303067]: 
         varValue: 
           - xmlizable: 
-            - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+            - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: source:{"filter":"Sequence","project":"C8oStudio","input":"listen(['C8oStudio.GetChildren'])?.array"}
     ↓qname [mobile.components.UIControlVariable-1589811848532]: 
       comment: new variable
       varValue: 
         - xmlizable: 
-          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
           - MobileSmartSourceType: script:out
 ↓Grid [mobile.components.UIDynamicElement-1588228737881]: 
   beanData: '{"ionBean":"Grid","Height":"plain:height:100%"}'
@@ -470,7 +470,7 @@ title: Title for FlowViewer
           attrName: (document:mousemove)
           attrValue: 
             - xmlizable: 
-              - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+              - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
               - MobileSmartSourceType: plain:onMouseMove($event)
   ↓GridRow1 [mobile.components.UIDynamicElement-1588228813856]: 
     beanData: '{"ionBean":"GridRow","Height":"plain:height:50px"}'
@@ -491,11 +491,11 @@ title: Title for FlowViewer
           attrName: '[(ngModel)]'
           attrValue: 
             - xmlizable: 
-              - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+              - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
               - MobileSmartSourceType: script:scale
         ↓Attr1 [mobile.components.UIAttribute-1588159608396]: 
           attrName: (ngModelChange)
           attrValue: 
             - xmlizable: 
-              - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+              - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
               - MobileSmartSourceType: script:onGridSizeChanged()
