--- a/_c8oProject/mobilePages/Projects.yaml
+++ b/_c8oProject/mobilePages/Projects.yaml
@@ -152,7 +152,7 @@ title: Title for Projects
           comment: new variable
           varValue: 
             - xmlizable: 
-              - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+              - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
               - MobileSmartSourceType: script:this.tree.treeModel.getFocusedNode().data.qname.replace(/\\..*/, '')
         ↓Log [mobile.components.UIDynamicAction-1589207109103]: 
           beanData: '{"ionBean":"LogAction","message":"script:out.success ? ''saved'' : ''save failed''"}'
@@ -180,13 +180,13 @@ title: Title for Projects
     attrName: '[nodes]'
     attrValue: 
       - xmlizable: 
-        - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+        - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
         - MobileSmartSourceType: script:nodes
   ↓options [mobile.components.UIAttribute-1588600889259]: 
     attrName: '[options]'
     attrValue: 
       - xmlizable: 
-        - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+        - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
         - MobileSmartSourceType: script:options
   ↓Tag [mobile.components.UIElement-1588602370121]: 
     identifier: treeNodeTemplate
@@ -198,33 +198,33 @@ title: Title for Projects
         attrName: src
         attrValue: 
           - xmlizable: 
-            - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+            - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: plain:{{ this.c8o.endpoint }}/.bin?__sequence=GetIcon&className={{ node.data.className }}
       ↓Attr1 [mobile.components.UIAttribute-1591623660927]: 
         attrName: width
         attrValue: 
           - xmlizable: 
-            - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+            - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: plain:16px
       ↓Attr2 [mobile.components.UIAttribute-1591623664174]: 
         attrName: height
         attrValue: 
           - xmlizable: 
-            - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+            - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: plain:16px
     ↓span [mobile.components.UIElement-1588602429371]: 
       tagName: span
       ↓Text [mobile.components.UIText-1588602449534]: 
         textValue: 
           - xmlizable: 
-            - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+            - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: plain:{{ node.data.displayName }}
       ↓Attr [mobile.components.UIAttribute-1589307825059]: 
     ↓Attr [mobile.components.UIAttribute-1588602477828]: 
       attrName: let-node
       attrValue: 
         - xmlizable: 
-          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
           - MobileSmartSourceType: plain:
   ↓focus [mobile.components.UIControlEvent-1588665835563]: 
     attrName: (focus)
