--- a/ionicTpl/package.json
+++ b/ionicTpl/package.json
@@ -4,61 +4,63 @@
   "homepage": "http://www.convertigo.com/",
   "private": true,
   "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build --enableLint false --generateSourceMap false",
-    "ionic:build": "ionic-app-scripts build --enableLint false",
-    "ionic:build:prod":"node --max_old_space_size=8192 ./node_modules/@ionic/app-scripts/bin/ionic-app-scripts.js  build --prod --enableLint false",
-    "ionic:serve:eval": "ionic-app-scripts serve --enableLint false --sourceMapType eval",
-    "ionic:serve:nosourcemap": "ionic-app-scripts serve --enableLint false --generateSourceMap false",
-    "ionic:serve": "ionic-app-scripts serve --enablelint false"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "ionic:build": "ng build app",
+    "ionic:build:prod": "ng build app --prod=true",
+    "ionic:serve": "ng serve app --sourceMap=true --hmr=true --hmrWarning=false --aot"
   },
   "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/http": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.20.0",
-    "@ionic-native/splash-screen": "~4.20.0",
-    "@ionic-native/status-bar": "~4.20.0",
-    "@ionic/storage": "2.2.0",
-    "ionic-angular": "3.9.9",
-    "ionicons": "3.0.0",
-    "rxjs": "6.3.3",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.29",
-    "@ngx-translate/core":"9.0.2",
-    "@ngx-translate/http-loader":"2.0.1",
-    "animate.css": "3.7.0",  
-    "c8osdkangular": "3.0.11-beta12",
-    "c8ocaf": "1.1.13",
+  	"@angular/common": "~9.1.6",
+    "@angular/core": "~9.1.6",
+    "@angular/forms": "~9.1.6",
+    "@angular/platform-browser": "~9.1.6",
+    "@angular/platform-browser-dynamic": "~9.1.6",
+    "@angular/router": "~9.1.6",
+    "@ionic-native/core": "^5.0.7",
+    "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic/angular": "^5.0.0",
+    "rxjs": "~6.5.1",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2",
+    "@ngx-translate/core": "12.1.2",
+    "@ngx-translate/http-loader": "4.0.0",
     "@types/node": "12.12.6",
+    "c8osdkangular": "3.0.9",
+    "c8ocaf": "2.0.0-beta3",
     "@embedded-enterprises/ng6-golden-layout": "0.0.12",
     "golden-layout":"1.5.9",
     "jquery":"3.5.0"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.4",
+  	"@angularclass/hmr": "~2.1.3",
+    "@angular-devkit/build-angular": "~0.901.5",
+    "@angular/cli": "~9.1.5",
+    "@angular/compiler": "~9.1.6",
+    "@angular/compiler-cli": "~9.1.6",
+    "@angular/language-service": "~9.1.6",
+    "@ionic/angular-toolkit": "^2.1.1",
+    "@types/node": "^12.11.1",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.35",
-    "typescript": "~2.8.2"
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3"
   },
-  "description": "MyApp: An Ionic project",
-  "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
-  ],
-  "config": {
-    "ionic_copy": "./config/copy.config.js",
-    "ionic_watch": "./config/watch.config.js",
-    "ionic_www_dir": "../DisplayObjects/mobile"
-  },
-  "cordovaPlatforms": []
+  "description": "MyApp: A Convertigo / Ionic  project"
 }
