--- a/_c8oProject/mobilePages/Palette.yaml
+++ b/_c8oProject/mobilePages/Palette.yaml
@@ -1,82 +1,82 @@
 segment: path-to-palette
 title: Title for Palette
-↓Subscribe_Handler [mobile.components.UIEventSubscriber-1589294263670]: 
+↓Subscribe_Handler [ngx.components.UIEventSubscriber-1589294263670]: 
   topic: dboFocus
-  ↓GetPalette [mobile.components.UIDynamicAction-1589294263673]: 
+  ↓GetPalette [ngx.components.UIDynamicAction-1589294263673]: 
     beanData: '{"ionBean":"CallSequenceAction","requestable":"plain:C8oStudio.GetPalette"}'
-    ↓qname [mobile.components.UIControlVariable-1589294263676]: 
+    ↓qname [ngx.components.UIControlVariable-1589294263676]: 
       comment: new variable
       varValue: 
         - xmlizable: 
           - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
           - MobileSmartSourceType: script:out
-↓Header [mobile.components.UIDynamicElement-1589296498379]: 
+↓Header [ngx.components.UIDynamicElement-1589296498379]: 
   beanData: '{"ionBean":"Header"}'
   isEnabled: false
   tagName: ion-header
-  ↓Label [mobile.components.UIDynamicElement-1589294006292]: 
+  ↓Label [ngx.components.UIDynamicElement-1589294006292]: 
     beanData: '{"ionBean":"Label"}'
     tagName: ion-label
-    ↓Text [mobile.components.UIText-1589296530756]: 
+    ↓Text [ngx.components.UIText-1589296530756]: 
       textValue: 
         - xmlizable: 
           - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
           - MobileSmartSourceType: plain:search
-  ↓TextInput [mobile.components.UIDynamicElement-1589293954554]: 
-    beanData: '{"ionBean":"Input"}'
+  ↓TextInput [ngx.components.UIDynamicElement-1589293954554]: 
+    beanData: '{"ionBean":"Input","Debounce":"plain:0"}'
     tagName: ion-input
-↓Content [mobile.components.UIDynamicElement-1589294543659]: 
+↓Content [ngx.components.UIDynamicElement-1589294543659]: 
   beanData: '{"ionBean":"Content"}'
   tagName: ion-content
-  ↓Grid [mobile.components.UIDynamicElement-1589294034878]: 
+  ↓Grid [ngx.components.UIDynamicElement-1589294034878]: 
     beanData: '{"ionBean":"Grid"}'
     tagName: ion-grid
-    ↓GridRow [mobile.components.UIDynamicElement-1589294040221]: 
+    ↓GridRow [ngx.components.UIDynamicElement-1589294040221]: 
       beanData: '{"ionBean":"GridRow"}'
       tagName: ion-row
-      ↓eachBean [mobile.components.UIControlDirective-1589294466370]: 
+      ↓eachBean [ngx.components.UIControlDirective-1589294466370]: 
         directiveSource: 
           - xmlizable: 
             - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: source:{"filter":"Sequence","project":"C8oStudio","input":"listen(['C8oStudio.GetPalette'])?.beans"}
-        ↓GridCol [mobile.components.UIDynamicElement-1589294196461]: 
+        ↓GridCol [ngx.components.UIDynamicElement-1589294196461]: 
           beanData: '{"ionBean":"GridCol"}'
           tagName: ion-col
-          ↓Button [mobile.components.UIDynamicElement-1589294486473]: 
+          ↓Button [ngx.components.UIDynamicElement-1589294486473]: 
             beanData: '{"ionBean":"Button"}'
             isEnabled: false
             tagName: button
-            ↓Text [mobile.components.UIText-1589294213965]: 
+            ↓Text [ngx.components.UIText-1589294213965]: 
               textValue: 
                 - xmlizable: 
                   - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
                   - MobileSmartSourceType: source:{"filter":"Iteration","project":"C8oStudio","input":"item1589294466370?.displayName"}
-          ↓CardContainer [mobile.components.UIDynamicElement-1589296323341]: 
+          ↓CardContainer [ngx.components.UIDynamicElement-1589296323341]: 
             beanData: '{"ionBean":"Card"}'
             isEnabled: false
             tagName: ion-card
-            ↓CardContent [mobile.components.UIDynamicElement-1589296328887]: 
+            ↓CardContent [ngx.components.UIDynamicElement-1589296328887]: 
               beanData: '{"ionBean":"CardContent"}'
               tagName: ion-card-content
-          ↓Div [mobile.components.UIDynamicElement-1589779436965]: 
+          ↓Div [ngx.components.UIDynamicElement-1589779436965]: 
             beanData: '{"ionBean":"DivTag"}'
             tagName: div
-            ↓Attr [mobile.components.UIAttribute-1589307787206]: 
+            ↓Attr [ngx.components.UIAttribute-1589307787206]: 
               attrName: draggable
               attrValue: 
                 - xmlizable: 
                   - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
                   - MobileSmartSourceType: plain:true
-            ↓Attr1 [mobile.components.UIAttribute-1589308698329]: 
+            ↓Attr1 [ngx.components.UIAttribute-1589308698329]: 
               attrName: attr.data-classname
               attrValue: 
                 - xmlizable: 
                   - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
                   - MobileSmartSourceType: source:{"filter":"Iteration","project":"C8oStudio","input":"item1589294466370?.className"}
-            ↓Event [mobile.components.UIControlEvent-1589307855989]: 
+            ↓Event [ngx.components.UIControlEvent-1589307855989]: 
               attrName: (dragstart)
               eventName: (dragstart)
-              ↓DragStart [mobile.components.UICustomAction-1589308407994]: 
+              ↓DragStart [ngx.components.UICustomAction-1589308407994]: 
                 actionValue: 
                   - xmlizable: 
                     - ↑classname: com.twinsoft.convertigo.beans.common.FormatedContent
@@ -90,29 +90,29 @@ title: Title for Palette
                         		console.log(event.srcElement.getAttribute(''data-classname''));
                         		resolve();
                         '
-            ↓Attr2 [mobile.components.UIAttribute-1589779554332]: 
+            ↓Attr2 [ngx.components.UIAttribute-1589779554332]: 
               attrName: class
               attrValue: 
                 - xmlizable: 
                   - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
                   - MobileSmartSourceType: plain:palette-item
-            ↓Image [mobile.components.UIDynamicElement-1589698349369]: 
+            ↓Image [ngx.components.UIDynamicElement-1589698349369]: 
               beanData: '{"ionBean":"Image"}'
               selfClose: true
               tagName: img
-              ↓Attr [mobile.components.UIAttribute-1589296349154]: 
+              ↓Attr [ngx.components.UIAttribute-1589296349154]: 
                 attrName: src
                 attrValue: 
                   - xmlizable: 
                     - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
                     - MobileSmartSourceType: plain:{{ this.c8o.endpoint }}/.bin?__sequence=GetIcon&className={{ item1589294466370.className }}&large=true
-              ↓Attr1 [mobile.components.UIAttribute-1589310725332]: 
+              ↓Attr1 [ngx.components.UIAttribute-1589310725332]: 
                 attrName: draggable
                 attrValue: 
                   - xmlizable: 
                     - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
                     - MobileSmartSourceType: plain:false
-              ↓SetWidth [mobile.components.UIStyle-1589699684073]: 
+              ↓SetWidth [ngx.components.UIStyle-1589699684073]: 
                 styleContent: 
                   - xmlizable: 
                     - ↑classname: com.twinsoft.convertigo.beans.common.FormatedContent
@@ -120,12 +120,12 @@ title: Title for Palette
                       →: |
                         '	width: 32px !important;
                         '
-            ↓Text [mobile.components.UIText-1589296402954]: 
+            ↓Text [ngx.components.UIText-1589296402954]: 
               textValue: 
                 - xmlizable: 
                   - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
                   - MobileSmartSourceType: source:{"filter":"Iteration","project":"C8oStudio","input":"item1589294466370?.displayName"}
-  ↓Attr [mobile.components.UIAttribute-1589699592601]: 
+  ↓Attr [ngx.components.UIAttribute-1589699592601]: 
     attrName: class
     attrValue: 
       - xmlizable: 
