--- a/_c8oProject/mobilePages/Projects.yaml
+++ b/_c8oProject/mobilePages/Projects.yaml
@@ -103,8 +103,8 @@ scriptContent:
         '
 segment: path-to-projects
 title: Title for Projects
-↓PageEvent [mobile.components.UIPageEvent-1588600884566]: 
-  ↓useAngularTreeComp [mobile.components.UICustomAction-1588600884569]: 
+↓PageEvent [ngx.components.UIPageEvent-1588600884566]: 
+  ↓useAngularTreeComp [ngx.components.UICustomAction-1588600884569]: 
     module_ng_imports: 
       - xmlizable: 
         - ↑classname: com.twinsoft.convertigo.beans.common.XMLVector
@@ -136,34 +136,34 @@ title: Title for Projects
                 - ↑value: angular-tree-component
               - java.lang.String: 
                 - ↑value: 7.2.1
-↓ButtonSet [mobile.components.UIDynamicElement-1589198919296]: 
+↓ButtonSet [ngx.components.UIDynamicElement-1589198919296]: 
   beanData: '{"ionBean":"ButtonSet"}'
   tagName: ion-buttons
-  ↓Save [mobile.components.UIDynamicElement-1589198944828]: 
+  ↓Save [ngx.components.UIDynamicElement-1589198944828]: 
     beanData: '{"ionBean":"Button"}'
     tagName: button
-    ↓Icon [mobile.components.UIDynamicElement-1589198839410]: 
+    ↓Icon [ngx.components.UIDynamicElement-1589198839410]: 
       beanData: '{"ionBean":"Icon","IconName":"plain:archive"}'
       tagName: ion-icon
-    ↓Event [mobile.components.UIControlEvent-1589203245136]: 
-      ↓Save [mobile.components.UIDynamicAction-1589203255756]: 
+    ↓Event [ngx.components.UIControlEvent-1589203245136]: 
+      ↓Save [ngx.components.UIDynamicAction-1589203255756]: 
         beanData: '{"ionBean":"CallSequenceAction","requestable":"plain:C8oStudio.Save"}'
-        ↓project [mobile.components.UIControlVariable-1589203568250]: 
+        ↓project [ngx.components.UIControlVariable-1589203568250]: 
           comment: new variable
           varValue: 
             - xmlizable: 
               - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
               - MobileSmartSourceType: script:this.tree.treeModel.getFocusedNode().data.qname.replace(/\\..*/, '')
-        ↓Log [mobile.components.UIDynamicAction-1589207109103]: 
+        ↓Log [ngx.components.UIDynamicAction-1589207109103]: 
           beanData: '{"ionBean":"LogAction","message":"script:out.success ? ''saved'' : ''save failed''"}'
-  ↓Refresh [mobile.components.UIDynamicElement-1589356972701]: 
+  ↓Refresh [ngx.components.UIDynamicElement-1589356972701]: 
     beanData: '{"ionBean":"Button"}'
     tagName: button
-    ↓Icon [mobile.components.UIDynamicElement-1589356972704]: 
+    ↓Icon [ngx.components.UIDynamicElement-1589356972704]: 
       beanData: '{"ionBean":"Icon","IconName":"plain:refresh-circle"}'
       tagName: ion-icon
-    ↓Event [mobile.components.UIControlEvent-1589356972707]: 
-      ↓Refresh [mobile.components.UICustomAction-1589357096393]: 
+    ↓Event [ngx.components.UIControlEvent-1589356972707]: 
+      ↓Refresh [ngx.components.UICustomAction-1589357096393]: 
         actionValue: 
           - xmlizable: 
             - ↑classname: com.twinsoft.convertigo.beans.common.FormatedContent
@@ -173,73 +173,73 @@ title: Title for Projects
                 		this.refresh(this.tree.treeModel.getFocusedNode().data.qname);
                 		resolve();
                 '
-↓Tag [mobile.components.UIElement-1588600889253]: 
+↓Tag [ngx.components.UIElement-1588600889253]: 
   identifier: tree
   tagName: tree-root
-  ↓nodes [mobile.components.UIAttribute-1588600889256]: 
+  ↓nodes [ngx.components.UIAttribute-1588600889256]: 
     attrName: '[nodes]'
     attrValue: 
       - xmlizable: 
         - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
         - MobileSmartSourceType: script:nodes
-  ↓options [mobile.components.UIAttribute-1588600889259]: 
+  ↓options [ngx.components.UIAttribute-1588600889259]: 
     attrName: '[options]'
     attrValue: 
       - xmlizable: 
         - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
         - MobileSmartSourceType: script:options
-  ↓Tag [mobile.components.UIElement-1588602370121]: 
+  ↓Tag [ngx.components.UIElement-1588602370121]: 
     identifier: treeNodeTemplate
     tagName: ng-template
-    ↓Tag [mobile.components.UIElement-1588602538271]: 
+    ↓Tag [ngx.components.UIElement-1588602538271]: 
       selfClose: true
       tagName: img
-      ↓Attr [mobile.components.UIAttribute-1588602577993]: 
+      ↓Attr [ngx.components.UIAttribute-1588602577993]: 
         attrName: src
         attrValue: 
           - xmlizable: 
             - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: plain:{{ this.c8o.endpoint }}/.bin?__sequence=GetIcon&className={{ node.data.className }}
-      ↓Attr1 [mobile.components.UIAttribute-1591623660927]: 
+      ↓Attr1 [ngx.components.UIAttribute-1591623660927]: 
         attrName: width
         attrValue: 
           - xmlizable: 
             - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: plain:16px
-      ↓Attr2 [mobile.components.UIAttribute-1591623664174]: 
+      ↓Attr2 [ngx.components.UIAttribute-1591623664174]: 
         attrName: height
         attrValue: 
           - xmlizable: 
             - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: plain:16px
-    ↓span [mobile.components.UIElement-1588602429371]: 
+    ↓span [ngx.components.UIElement-1588602429371]: 
       tagName: span
-      ↓Text [mobile.components.UIText-1588602449534]: 
+      ↓Text [ngx.components.UIText-1588602449534]: 
         textValue: 
           - xmlizable: 
             - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
             - MobileSmartSourceType: plain:{{ node.data.displayName }}
-      ↓Attr [mobile.components.UIAttribute-1589307825059]: 
-    ↓Attr [mobile.components.UIAttribute-1588602477828]: 
+      ↓Attr [ngx.components.UIAttribute-1589307825059]: 
+    ↓Attr [ngx.components.UIAttribute-1588602477828]: 
       attrName: let-node
       attrValue: 
         - xmlizable: 
           - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
           - MobileSmartSourceType: plain:
-  ↓focus [mobile.components.UIControlEvent-1588665835563]: 
+  ↓focus [ngx.components.UIControlEvent-1588665835563]: 
     attrName: (focus)
     eventName: (focus)
-    ↓PublishEvent [mobile.components.UIDynamicAction-1588686512803]: 
+    ↓PublishEvent [ngx.components.UIDynamicAction-1588686512803]: 
       beanData: |
         '{
          "ionBean": "PublishEventAction",
          "topic": "plain:dboFocus",
          "data": "script:$event.node.data.qname"
         }'
-  ↓toggleExpanded [mobile.components.UIControlEvent-1590396657512]: 
+  ↓toggleExpanded [ngx.components.UIControlEvent-1590396657512]: 
     attrName: (toggleExpanded)
     eventName: (toggleExpanded)
-    ↓prefetchChildren [mobile.components.UICustomAction-1590396700574]: 
+    ↓prefetchChildren [ngx.components.UICustomAction-1590396700574]: 
       actionValue: 
         - xmlizable: 
           - ↑classname: com.twinsoft.convertigo.beans.common.FormatedContent
