--- a/_c8oProject/mobileSharedComponents/CodeEditor.yaml
+++ b/_c8oProject/mobileSharedComponents/CodeEditor.yaml
@@ -1,5 +1,5 @@
-↓PageEvent [mobile.components.UIPageEvent-1587900690144]: 
-  ↓useMonacoEditor [mobile.components.UICustomAction-1587900690162]: 
+↓PageEvent [ngx.components.UIPageEvent-1587900690144]: 
+  ↓useMonacoEditor [ngx.components.UICustomAction-1587900690162]: 
     module_ng_imports: 
       - xmlizable: 
         - ↑classname: com.twinsoft.convertigo.beans.common.XMLVector
@@ -31,37 +31,37 @@
                 - ↑value: ngx-monaco-editor
               - java.lang.String: 
                 - ↑value: 6.0.0
-↓Tag [mobile.components.UIElement-1587900690165]: 
+↓Tag [ngx.components.UIElement-1587900690165]: 
   tagName: ngx-monaco-editor
-  ↓Attr [mobile.components.UIAttribute-1587900690193]: 
+  ↓Attr [ngx.components.UIAttribute-1587900690193]: 
     attrName: '[(ngModel)]'
     attrValue: 
       - xmlizable: 
         - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
         - MobileSmartSourceType: script:params1587900690141.code
-  ↓Attr3 [mobile.components.UIAttribute-1587900690196]: 
+  ↓Attr3 [ngx.components.UIAttribute-1587900690196]: 
     attrName: '[options]'
     attrValue: 
       - xmlizable: 
         - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
         - MobileSmartSourceType: script:params1587900690141.options
-  ↓Attr1 [mobile.components.UIAttribute-1587900690199]: 
+  ↓Attr1 [ngx.components.UIAttribute-1587900690199]: 
     attrName: style
     attrValue: 
       - xmlizable: 
         - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
         - MobileSmartSourceType: 'plain:height: 100%'
-  ↓Attr4 [mobile.components.UIAttribute-1588002793861]: 
+  ↓Attr4 [ngx.components.UIAttribute-1588002793861]: 
     attrName: (onInit)
     attrValue: 
       - xmlizable: 
         - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
         - MobileSmartSourceType: script:onInit($event)
-  ↓Attr2 [mobile.components.UIAttribute-1587900690202]: 
+  ↓Attr2 [ngx.components.UIAttribute-1587900690202]: 
     attrName: class
     attrValue: 
       - xmlizable: 
         - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
         - MobileSmartSourceType: plain:monaco-code-editor
-↓code [mobile.components.UICompVariable-1587900690205]: 
-↓options [mobile.components.UICompVariable-1587900690208]: 
+↓code [ngx.components.UICompVariable-1587900690205]: 
+↓options [ngx.components.UICompVariable-1587900690208]: 
