--- a/ionicTpl/package.json
+++ b/ionicTpl/package.json
@@ -18,6 +18,7 @@
   	"@angular/common": "~9.1.6",
     "@angular/core": "~9.1.6",
     "@angular/forms": "~9.1.6",
+    "@angular/animations": "~9.1.6",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
@@ -30,12 +31,10 @@
     "zone.js": "~0.10.2",
     "@ngx-translate/core": "12.1.2",
     "@ngx-translate/http-loader": "4.0.0",
-    "@types/node": "12.12.6",
     "c8osdkangular": "3.0.9",
     "c8ocaf": "2.0.0-beta3",
-    "@embedded-enterprises/ng6-golden-layout": "0.0.12",
-    "golden-layout":"1.5.9",
-    "jquery":"3.5.0"
+	"ngx-golden-layout": "0.0.12",
+    "golden-layout":"1.5.9"
   },
   "devDependencies": {
   	"@angularclass/hmr": "~2.1.3",
@@ -45,10 +44,10 @@
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
     "@ionic/angular-toolkit": "^2.1.1",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.35",
+    "@types/jquery": "^3.5.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
