Fixed palette styles

--- a/_c8oProject/mobileApplication.yaml
+++ b/_c8oProject/mobileApplication.yaml
@@ -1314,7 +1314,7 @@ tplProjectName: C8oStudio
         →: |
           '.page-palette .palette-item {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;	
-            background: var(--ion-color-dark);
+            background: #2d3436;
             color: white;
             width: 150px;
             height: 50px;
