--- a/_c8oProject/mobileApplication.yaml
+++ b/_c8oProject/mobileApplication.yaml
@@ -286,7 +286,7 @@ tplProjectName: C8oStudio
           	 		background-color: your color; 
           	 		background-image: url(some background image);
           	*/
-          	background-color: var(--ion-color-dark)
+          	background-color: #121212;
           }
           
           .toolbar-background {
@@ -1315,6 +1315,7 @@ tplProjectName: C8oStudio
           '.page-palette .palette-item {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;	
             background: #2d3436;
+            font-size: 12px;
             color: white;
             width: 150px;
             height: 50px;
